--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -378,6 +378,7 @@ enable_mongodb: "no"
 enable_multipathd: "no"
 enable_murano: "no"
 enable_neutron_vpnaas: "no"
+enable_neutron_sriov: "no"
 enable_neutron_dvr: "no"
 enable_neutron_lbaas: "no"
 enable_neutron_fwaas: "no"
